# npiet-1.3e

./: .gitignore  .gitmodules  CMakeLists.txt  config.h  npiet.c  npietwrapper.js
npietsrc/: CMakeLists.txt  config.h  emscripten-hooks.c  file_loading.c  npiet.c  npiet.h
src/: main.js  main.js.map  main.ts
